--- a/modifications.css
+++ b/modifications.css
@@ -10,8 +10,8 @@
 
 .navbar-toggle { position: relative; float: right; padding: 9px 10px; margin: 8px 15px 8px 0px; background: #333; border: 1px solid transparent; border-radius: 4px; }
     .navbar-toggle:focus {outline: none;}
-        .navbar-toggle .icon-bar { display: block; width: 22px; height: 2px; border-radius: 1px; }
-        .navbar-toggle .icon-bar + .icon-bar { margin-top: 4px; }
+         .icon-bar { display: block; width: 22px; height: 2px;background-color: #fff;  border-radius: 1px; }
+       .icon-bar + .icon-bar { margin-top: 4px; }
 
 
 .container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse { margin-right: -15px; margin-left: -15px; }
@@ -36,7 +36,7 @@
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus { background-color: #555; }
 
-.navbar-inverse .navbar-toggle .icon-bar { background-color: #fff; }
+
 
 
 
@@ -148,223 +148,6 @@ footer {color: rgb(255, 255, 255); padding-top: 20px;
                 .headerlinks { text-align: center; }
                    .headerlinks li {padding:0 15px !important;}
 }
-
-
-/*
-
-@media only screen and (max-width: 990px) {
-}
-
-
-@media (min-width: 768px) and (max-width: 991px) {
-}
-
-
-@media (min-width: 992px) and (max-width: 1199px) {
-}
-
-
-@media (min-width: 1200px) {
-}
-
-
-
-
-
-@media (max-width: 500px) {
-
-                .logo {width:150px !important;}
-                    .logo {background-size:259px 37px !important;}
-
-                button + a.navbar-brand { width: 150px; height:45px; display: block; margin:5px 0 0 10px !important;}
-
-                .questions {padding-left: 10px !important;}
-                .a {margin-left: 10px !important;}
-                h2, .indent {margin-left: 0px !important;}
-                .headerlinks {padding-left: 0px;}
-
-}
-
-@media only screen and (min-width:651px) and (max-width:700px) {
-
-               .maintext h1 {font-size: 30px !important;}
-               
-               .panel-desc {width: 85%; overflow: hidden; padding: 10px 0; }
-        .panel-desc p {width: 83%; float: right;}
-
-}
-
-
-@media (max-width: 767px) {
-}
-
-   
-    @media print {
-         * { color: #000 !important; text-shadow: none !important; background: transparent !important; box-shadow: none !important; }
-         a, a:visited {text-decoration: underline; }
-              a[href]:after { content: " (" attr(href) ")"; }
-         abbr[title]:after { content: " (" attr(title) ")"; }
-         a[href^="javascript:"]:after, 
-         a[href^="#"]:after { content: ""; }
-        pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-        thead { display: table-header-group; }
-        tr, img { page-break-inside: avoid; }
-        img { max-width: 100% !important;}
-        p, h2, h3 { orphans: 3; widows: 3; }
-        h2,h3 { page-break-after: avoid;}
-        select { background: #fff !important; }
-        .navbar {display: none; }
-        .table td, .table th { background-color: #fff !important; }
-        .btn > .caret, .dropup > .btn > .caret { border-top-color: #000 !important;}
-        .label { border: 1px solid #000;}
-        .table { border-collapse: collapse !important; }
-        .table-bordered th, .table-bordered td { border: 1px solid #ddd !important; }
-    }
-
-
-
-
-
-
-
-
-@media (min-width: 768px) {
-}
-
-
-@media only screen and (max-width:600px) {
-}
-
-        
-@media only screen and (min-width:601px) and (max-width:649px) {
-}
-
-
-@media (max-width:650px) {
-}
-
-
-
-
-@media screen and (min-width: 768px) {
-            
-             
-              
-               .jumbotron { margin: 0 auto; min-height: 406px; }
-              
-                .jumbotron h1, .jumbotron .h1 { font-size: 38px;/*width:500px; margin-right: 155px; }
-
-                .thumbnail { display: block; padding: 4px; margin-bottom: 20px; line-height: 1.42857143; background-color: #fff; border: 1px solid #ddd; border-radius: 4px;
-                    
-                    -webkit-transition: all .2s ease-in-out;
-                    transition: all .2s ease-in-out; }
-
-                .thumbnail > img,
-                .thumbnail a > img { margin-right: auto; margin-left: auto; }
-
-                a.thumbnail:hover,
-                a.thumbnail:focus,
-                a.thumbnail.active { border-color: #428bca; }
-
-                /*.thumbnail .caption {padding: 9px; color: #333; }*/
-}
-
-
-
-
-
-/*.navbar-nav > li > .dropdown-menu { margin-top: 0; border-top-left-radius: 0; border-top-right-radius: 0; }*/
-	
-/*.navbar-fixed-bottom .navbar-nav > li > .dropdown-menu { border-bottom-right-radius: 0;  border-bottom-left-radius: 0;}*/
-		
-/*.navbar-btn {  margin-top: 8px; margin-bottom: 8px; }
-		.navbar-btn.btn-sm { margin-top: 10px; margin-bottom: 10px; }
-		.navbar-btn.btn-xs { margin-top: 14px; margin-bottom: 14px; }
-		.navbar-text { margin-top: 15px; margin-bottom: 15px; }
-
-
-
-
-		@media (min-width: 768px) { 
-				.navbar-text { float: left; margin-right: 15px; margin-left: 15px; }
-				.navbar-text.navbar-right:last-child { margin-right: 0; }
-		}
-
-
-
-		@media (max-width: 767px) {
-				.navbar-default .navbar-nav .open .dropdown-menu > li > a { color: #777; }
-			  
-				.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-				.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus { color: #333; background-color: transparent; }
-			  
-				.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-				.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-				.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus { color: #555; background-color: #e7e7e7; }
-
-				.navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
-				.navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
-				.navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus { color: #ccc; background-color: transparent; }
-		}
-
-.navbar-default .navbar-link { color: #777; }
-
-.navbar-default .navbar-link:hover { color: #333; }*/
-
-
-
-
-		/*@media (max-width: 767px) {
-				/*.navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header { border-color: #080808; }
-				.navbar-inverse .navbar-nav .open .dropdown-menu .divider { background-color: #080808; }
-
-				.navbar-inverse .navbar-nav .open .dropdown-menu > li > a { color: #999;  }
-
-				.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
-				.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus { color: #fff; background-color: transparent; }
-
-				.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
-				.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
-				.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus { color: #fff; background-color: #080808; }
-
-				.navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
-				.navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
-				.navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:focus { color: #444; background-color: transparent; }*/
-
-                /*.maintext {width:100%; margin:0 auto;}
-                .maintext > div {margin: 0 auto; width:80%; position: relative;}
-		}*/
-
-
-/*.pre-scrollable { max-height: 340px;  overflow-y: scroll; }*/
-
-
-/*.navbar-collapse.in { overflow-y: auto;}*/
-
-
-/*.navbar-inverse .navbar-collapse,
-.navbar-inverse .navbar-form { border-color: #101010; }*/
-
-/*.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .open > a:hover,
-.navbar-inverse .navbar-nav > .open > a:focus { color: #fff; background-color: #080808;}*/
-
-
-/*.navbar-inverse .navbar-link { color: #999; }
-.navbar-inverse .navbar-link:hover { color: #fff;}*/
-
-
-/*.navbar-inverse .navbar-nav > li > a { color: #999; }
-    .navbar-inverse .navbar-nav > li > a:hover,
-    .navbar-inverse .navbar-nav > li > a:focus { color: #fff; background-color: transparent;}
-        
-        .navbar-inverse .navbar-nav > .active > a,
-        .navbar-inverse .navbar-nav > .active > a:hover,
-        .navbar-inverse .navbar-nav > .active > a:focus { color: #fff; background-color: #080808;}
-
-.navbar-inverse .navbar-nav > .disabled > a,
-.navbar-inverse .navbar-nav > .disabled > a:hover,
-.navbar-inverse .navbar-nav > .disabled > a:focus { color: #444; background-color: transparent; }*/
 
 
 
