--- a/flexnav1.css
+++ b/flexnav1.css
@@ -8,7 +8,10 @@
   overflow: hidden;
   margin: 0 auto;
   width: 100%;
-  max-height: 0; }
+  max-height: 0;
+  padding: 0;
+  background: linear-gradient(to bottom, #127cb2 0%, #0470a9 12%, #0367a0 36%, #01548d 71%, #004c8c 91%, #004683 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+   }
   .flexnav.opacity {
     opacity: 0; }
   .flexnav.flexnav-show {
@@ -30,12 +33,14 @@
   .flexnav li a {
     position: relative;
     display: block;
-    padding: .96em;
+    
     z-index: 2;
     overflow: hidden;
-    color: #222222;
-    background: #a6a6a2;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.15); }
+  
+     color: #fff;
+    font-family: "ITCLubalinGraphW01-Demi";
+    font-size: 18px;
+    }
   .flexnav li ul {
     width: 100%; }
     .flexnav li ul li {
@@ -44,13 +49,7 @@
       overflow: hidden; }
   .flexnav li ul.flexnav-show li {
     overflow: visible; }
-  .flexnav li ul li a {
-    display: block;
-    background: #b2b2af; }
-  .flexnav ul li ul li a {
-    background: #bfbfbc; }
-  .flexnav ul li ul li ul li a {
-    background: #cbcbc9; }
+ 
   .flexnav .touch-button {
     position: absolute;
     z-index: 999;
@@ -71,13 +70,17 @@
       color: #666; }
 
 .menu-button {
-  position: relative;
-  display: block;
-  padding: 1em;
-  background: #a6a6a2;
-  color: #222222;
-  cursor: pointer;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+    background: none repeat scroll 0 0 #333;
+    float: right;
+    border-radius: 4px;
+    color: #222222;
+    cursor: pointer;
+    display: block;
+    margin: 8px 15px 8px 0;
+    padding: 1em;
+    position: relative;
+}
+
   .menu-button.one-page {
     position: fixed;
     top: 0;
@@ -113,15 +116,13 @@
       max-width: 1080px; }
     .flexnav li {
       position: relative;
+      bottom: -50px;
       list-style: none;
       float: left;
       display: block;
-      background-color: #a6a6a2;
       overflow: visible;
       width: 20%; }
-    .flexnav li a {
-      border-left: 1px solid #acaca1;
-      border-bottom: none; }
+    
     .flexnav li > ul {
       position: absolute;
       top: auto;
